Changed base href to be a bit dynamic

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Collab</title>
   <script>
-    var baseHref = window.location.pathname.substring(1);
+    var baseHref = window.location.pathname;
     if (!baseHref) {
       baseHref = '/';
     }
