Some touch event stuff and some build stuff

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Collab</title>
-  <script>
-    var baseHref = window.location.pathname;
-    if (!baseHref) {
-      baseHref = '/';
-    }
-    document.write('<base href="' + baseHref + '" />');
-
-  </script>
+  <base href="/" />
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
